@@ -1,3 +1,11 @@
+2011-08-14    <Jim@LS-RED>
+
+	* spim/spim.c (write_assembled_code) [George Prekas (prekgeo)]:
+	Added command line argument to dump contents of text and data segments.
+
+	* spim/spim.c:
+	Clean up code for dumping text segment and comments.
+
 2011-07-30    <Jim@LS-RED>
 
 	* QtSpim/help/HP_AppA.html [Tatpong Katanyukul <tatpong@gmail.com>]:
